Fixing the header layout with text-align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     font-family: Rubik, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
-    background-color: #E6F4FF;
+    background-color: #CCEAFF;
 }
 
 /* heading and logo */
@@ -29,6 +29,7 @@ h1, h2 {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    align-items: center;
   }
   
   #menu {
@@ -36,6 +37,9 @@ h1, h2 {
     gap: 4.8rem;
     list-style-type: none;
     flex-direction: row-reverse;
+    font-size: 120%;
+    letter-spacing: 4px;
+    margin-right: 30px;
   }
   
   .header a {
@@ -43,13 +47,12 @@ h1, h2 {
   }
   #logo {
     font-size: 260%;
-    margin: 10px 0 0 10px;
+    margin-left: 10px;
   }
   
-  #menu {
-    font-size: 120%;
-    letter-spacing: 4px;
-    margin-right: 30px;
+  #menu, #logo {
+    line-height: 75px;
+    
   }
   
   #menu a {
